--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,8 @@
     "serve-favicon": "~2.3.0",
     "mocha": "*",
     "should": "^7.1.1",
-    "supertest": "^1.1.0"
+    "supertest": "^1.1.0",
+    "request": "^2.55.0",
+    "socket.io": "^1.3.5"
   }
 }
