--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -10,7 +10,7 @@ RUN wget http://download.redis.io/releases/redis-3.0.5.tar.gz
 RUN tar xzf redis-3.0.5.tar.gz
 RUN cd /redis-3.0.5; make
 RUN cd /
-COPY . /src
+COPY . ../src
 RUN cd /src/src; npm install
 EXPOSE 8080
 WORKDIR /src/src
