--- a/src/package.json
+++ b/src/package.json
@@ -15,10 +15,10 @@
     "jshint": "^2.8.0",
     "mocha": "*",
     "morgan": "~1.6.1",
+    "request": "^2.55.0",
     "serve-favicon": "~2.3.0",
     "should": "^7.1.1",
-    "supertest": "^1.1.0",
-    "request": "^2.55.0",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "supertest": "^1.1.0"
   }
 }
