--- a/deployment/production.yml
+++ b/deployment/production.yml
@@ -26,6 +26,17 @@
    # - name: Build Dockerfile
    #   docker_image: path="/home/ubuntu/M3-Deployment" name="sample-app" state=build
    #   sudo: yes
+    - name: Redis container
+      docker:
+        name: myredis
+        image: redis
+        command: redis-server --appendonly yes
+        state: started
+        ports:
+          - 6379:6379
+        docker_api_version: 1.18
+      sudo: yes
+
     - name: Build
       command: docker build -t sample-app .
       args:
@@ -33,11 +44,11 @@
       sudo: yes
 
     - name: Tag
-      command: docker tag -f sample-app sample-app:latest
+      command: docker tag -f sample-app localhost:5000/sample:production
       sudo: yes
    
     - name: push
-      command: docker push localhost:5000/sample:latest
+      command: docker push localhost:5000/sample:production
       sudo: yes
     
     - name: stop app
@@ -48,12 +59,13 @@
     - name: App
       docker:
         name: app
-        image: localhost:5000/sample:latest
+        image: localhost:5000/sample:production
         registry: localhost:5000
         state: restarted
         pull: always
         ports:
-          - 50100:8080
+          - 3000:3000
+          - 6379:6379
         docker_api_version: 1.18
       sudo: yes
    # - name: run
