--- a/deployment/proxy.yml
+++ b/deployment/proxy.yml
@@ -47,7 +47,7 @@
       sudo: yes
 
     - name: Tag
-      command: docker tag -f proxy plocalhost:5000/sample:proxy
+      command: docker tag -f proxy localhost:5000/sample:proxy
       sudo: yes
    
     - name: push
