--- a/deployment/provision.yml
+++ b/deployment/provision.yml
@@ -4,6 +4,14 @@
     - name: Install Git
       apt: pkg=git state=installed update_cache=true
       sudo: yes
+    
+    - name : Install curl
+      apt: pkg=git state=installed update_cache=true
+      sudo: yes
+
+    - name: Install docker
+      command: curl -sSL https://get.docker.com/ | sh
+      sudo: yes
 
     - name: Install pip
       apt: pkg=python-pip state=installed update_cache=true
