add description for monitor

--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "jshint": "^2.8.0",
     "mocha": "*",
     "morgan": "~1.6.1",
+    "nodemailer": "*",
     "redis": "^2.3.0",
     "request": "^2.55.0",
     "serve-favicon": "~2.3.0",
